--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
     
     <!--ideia de relatorio pra deixar mais facil a visualização-->
     <div class="relatorio">
-        <div id="rel01"></div>
-        <div id="rel02"></div>
-        <div id="rel03"></div>
-        <div id="rel04"></div>
-        <div id="rel05"></div>
-        <div id="rel06"></div>
-        <div id="rel07"></div>
+        <div class="rel" id="rel01"></div>
+        <div class="rel" id="rel02"></div>
+        <div class="rel" id="rel03"></div>
+        <div class="rel" id="rel04"></div>
+        <div class="rel" id="rel05"></div>
+        <div class="rel" id="rel06"></div>
+        <div class="rel" id="rel07"></div>
     </div>
 
     <script src="js/js.js"></script>
